// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the job endpoint A job failed can be recover  1`] = `"[Error: step-5 failed] Stack: Error: step-5 failed"`;

exports[`Test the job endpoint A job failed can be recover  2`] = `"queued"`;

exports[`Test the job endpoint Be able to hold a type of job and toggle it 1`] = `
Object {
  "toggleHoldJobType": Object {
    "id": 1,
    "type": "type-1",
  },
}
`;

exports[`Test the job endpoint Check if you cannot duplicate job according to jobUniqueId 1`] = `
Object {
  "jobCreate": Object {
    "id": 1,
    "jobUniqueId": "job-unique-1",
    "name": "Bla a",
    "output": Object {},
    "status": "queued",
  },
}
`;

exports[`Test the job endpoint List the jobs 1`] = `
Object {
  "data": Object {
    "job": Array [
      Object {
        "id": 1,
        "name": "Bla a",
      },
      Object {
        "id": 2,
        "name": "Bla b",
      },
      Object {
        "id": 3,
        "name": "Bla c",
      },
      Object {
        "id": 4,
        "name": "Bla d",
      },
      Object {
        "id": 5,
        "name": "Bla e",
      },
    ],
  },
}
`;

exports[`Test the job endpoint List the jobs with and without highFrequency 1`] = `
Object {
  "job": Array [
    Object {
      "id": 2,
      "isHighFrequency": false,
      "name": "Bla b",
      "status": "queued",
    },
    Object {
      "id": 3,
      "isHighFrequency": false,
      "name": "Bla c",
      "status": "failed",
    },
    Object {
      "id": 4,
      "isHighFrequency": false,
      "name": "Bla d",
      "status": "planned",
    },
    Object {
      "id": 5,
      "isHighFrequency": false,
      "name": "Bla e",
      "status": "cancelled",
    },
  ],
}
`;

exports[`Test the job endpoint List the jobs with and without highFrequency 2`] = `
Object {
  "job": Array [
    Object {
      "id": 1,
      "isHighFrequency": true,
      "name": "Bla a",
      "status": "queued",
    },
  ],
}
`;

exports[`Test the job endpoint One can create a job of a given type. 1`] = `
Object {
  "jobCreate": Object {
    "id": 6,
    "jobUniqueId": null,
    "name": "c",
    "output": null,
    "status": "queued",
  },
}
`;

exports[`Test the job endpoint The job can be restarted if it fails 1`] = `
Object {
  "retryJob": Object {
    "id": 6,
    "name": "Bla c",
    "status": "queued",
    "type": "c",
  },
}
`;

exports[`Test the job endpoint Workers can easily create jobs. 1`] = `
Object {
  "__typename": "job",
  "batchId": null,
  "id": 6,
  "input": null,
  "isHighFrequency": false,
  "isUpdateAlreadyCalledWhileCancelRequested": false,
  "name": null,
  "output": null,
  "startAfter": null,
  "status": "queued",
  "type": "c",
}
`;

exports[`Test the job endpoint Workers can easily query jobs. 1`] = `
Array [
  Object {
    "__typename": "job",
    "id": 1,
    "input": Object {},
    "name": "Bla a",
    "output": Object {},
    "type": "a",
  },
  Object {
    "__typename": "job",
    "id": 2,
    "input": Object {},
    "name": "Bla b",
    "output": Object {},
    "type": "b",
  },
  Object {
    "__typename": "job",
    "id": 3,
    "input": Object {},
    "name": "Bla c",
    "output": Object {},
    "type": "c",
  },
  Object {
    "__typename": "job",
    "id": 4,
    "input": Object {},
    "name": "Bla d",
    "output": Object {},
    "type": "d",
  },
  Object {
    "__typename": "job",
    "id": 5,
    "input": Object {},
    "name": "Bla e",
    "output": Object {},
    "type": "e",
  },
]
`;

exports[`Test the job endpoint Workers can easily query jobs. 2`] = `
Array [
  Object {
    "__typename": "job",
    "id": 1,
    "input": Object {},
    "name": "Bla a",
    "output": Object {},
    "type": "a",
  },
]
`;
